🎨 Fixes x-overflow issue on home page #74

--- a/src/components/CloudHero/CloudHero.module.css
+++ b/src/components/CloudHero/CloudHero.module.css
@@ -1,5 +1,5 @@
 .background {
   background: url("https://raw.githubusercontent.com/openclimatefix/website/master/src/images/clouds_repeat.jpg") repeat;
 
-  @apply absolute left-0 w-screen bg-fixed;
+  @apply absolute left-0 w-full bg-fixed;
 }
